syntax = "proto3";

package deployer.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "deployer/service/v1/target_configuration.proto";

// Certificate filter for auto-deployment
// All specified fields must match (AND logic). Empty fields are ignored.
message CertificateFilter {
  // Matches the certificate issuer name (exact match)
  optional string issuer_name = 1 [json_name = "issuerName"];

  // Matches the certificate Common Name (regex pattern)
  optional string common_name_pattern = 2 [json_name = "commonNamePattern"];

  // Matches any Subject Alternative Name - DNS names (regex pattern)
  optional string san_pattern = 3 [json_name = "sanPattern"];

  // Matches the certificate Subject Organization (exact match)
  optional string subject_organization = 4 [json_name = "subjectOrganization"];

  // Matches the certificate Subject Organizational Unit (exact match)
  optional string subject_org_unit = 5 [json_name = "subjectOrgUnit"];

  // Matches the certificate Subject Country (exact match)
  optional string subject_country = 6 [json_name = "subjectCountry"];

  // Labels for matching (reserved for future use)
  repeated string labels = 10 [json_name = "labels"];

  // Deprecated: Use common_name_pattern and san_pattern instead
  optional string domain_pattern = 99 [json_name = "domainPattern", deprecated = true];
}

// Deployment target entity - represents a GROUP of target configurations
message DeploymentTarget {
  optional string id = 1 [json_name = "id"];
  optional uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string name = 3 [json_name = "name"];
  optional string description = 4 [json_name = "description"];
  optional bool auto_deploy_on_renewal = 5 [json_name = "autoDeployOnRenewal"];
  repeated CertificateFilter certificate_filters = 6 [json_name = "certificateFilters"];

  // Linked target configurations (populated when requested)
  repeated TargetConfiguration configurations = 10 [json_name = "configurations"];
  // Count of linked configurations
  optional int32 configuration_count = 11 [json_name = "configurationCount"];

  optional uint32 created_by = 100 [json_name = "createdBy"];
  optional uint32 updated_by = 101 [json_name = "updatedBy"];
  optional google.protobuf.Timestamp create_time = 200 [json_name = "createTime"];
  optional google.protobuf.Timestamp update_time = 201 [json_name = "updateTime"];
}

// Create a new deployment target (group)
message CreateTargetRequest {
  uint32 tenant_id = 1 [
    json_name = "tenantId",
    (google.api.field_behavior) = REQUIRED
  ];
  string name = 2 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ];
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  optional bool auto_deploy_on_renewal = 4 [json_name = "autoDeployOnRenewal"];
  repeated CertificateFilter certificate_filters = 5 [json_name = "certificateFilters"];
  // Optional: link configurations during creation
  repeated string configuration_ids = 6 [json_name = "configurationIds"];
}

message CreateTargetResponse {
  DeploymentTarget target = 1 [json_name = "target"];
}

// Get a deployment target
message GetTargetRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  // Include linked configurations in the response
  optional bool include_configurations = 2 [json_name = "includeConfigurations"];
}

message GetTargetResponse {
  DeploymentTarget target = 1 [json_name = "target"];
}

// List deployment targets
message ListTargetsRequest {
  optional uint32 tenant_id = 1 [json_name = "tenantId"];
  optional bool auto_deploy_on_renewal = 2 [json_name = "autoDeployOnRenewal"];
  // Include linked configurations in the response
  optional bool include_configurations = 3 [json_name = "includeConfigurations"];
  optional uint32 page = 10 [json_name = "page"];
  optional uint32 page_size = 11 [json_name = "pageSize"];
}

message ListTargetsResponse {
  repeated DeploymentTarget items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
}

// Update a deployment target
message UpdateTargetRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ];
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 512}
  ];
  optional bool auto_deploy_on_renewal = 4 [json_name = "autoDeployOnRenewal"];
  repeated CertificateFilter certificate_filters = 5 [json_name = "certificateFilters"];
}

message UpdateTargetResponse {
  DeploymentTarget target = 1 [json_name = "target"];
}

// Delete a deployment target
message DeleteTargetRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
}

// Add configurations to a deployment target
message AddConfigurationsRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  repeated string configuration_ids = 2 [
    json_name = "configurationIds",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).repeated.min_items = 1
  ];
}

message AddConfigurationsResponse {
  DeploymentTarget target = 1 [json_name = "target"];
}

// Remove configurations from a deployment target
message RemoveConfigurationsRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  repeated string configuration_ids = 2 [
    json_name = "configurationIds",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).repeated.min_items = 1
  ];
}

message RemoveConfigurationsResponse {
  DeploymentTarget target = 1 [json_name = "target"];
}

// List configurations linked to a deployment target
message ListTargetConfigurationsRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED
  ];
  optional uint32 page = 10 [json_name = "page"];
  optional uint32 page_size = 11 [json_name = "pageSize"];
}

message ListTargetConfigurationsResponse {
  repeated TargetConfiguration items = 1 [json_name = "items"];
  uint64 total = 2 [json_name = "total"];
}

// Deployment Target Service
service DeploymentTargetService {
  // Create a new deployment target (group)
  rpc CreateTarget(CreateTargetRequest) returns (CreateTargetResponse) {
    option (google.api.http) = {
      post: "/v1/deployment-targets"
      body: "*"
    };
  }
  // Get a deployment target by ID
  rpc GetTarget(GetTargetRequest) returns (GetTargetResponse) {
    option (google.api.http) = {
      get: "/v1/deployment-targets/{id}"
    };
  }
  // List deployment targets
  rpc ListTargets(ListTargetsRequest) returns (ListTargetsResponse) {
    option (google.api.http) = {
      get: "/v1/deployment-targets"
    };
  }
  // Update a deployment target
  rpc UpdateTarget(UpdateTargetRequest) returns (UpdateTargetResponse) {
    option (google.api.http) = {
      put: "/v1/deployment-targets/{id}"
      body: "*"
    };
  }
  // Delete a deployment target
  rpc DeleteTarget(DeleteTargetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/deployment-targets/{id}"
    };
  }
  // Add configurations to a deployment target
  rpc AddConfigurations(AddConfigurationsRequest) returns (AddConfigurationsResponse) {
    option (google.api.http) = {
      post: "/v1/deployment-targets/{id}/configurations"
      body: "*"
    };
  }
  // Remove configurations from a deployment target
  rpc RemoveConfigurations(RemoveConfigurationsRequest) returns (RemoveConfigurationsResponse) {
    option (google.api.http) = {
      delete: "/v1/deployment-targets/{id}/configurations"
    };
  }
  // List configurations linked to a deployment target
  rpc ListTargetConfigurations(ListTargetConfigurationsRequest) returns (ListTargetConfigurationsResponse) {
    option (google.api.http) = {
      get: "/v1/deployment-targets/{id}/configurations"
    };
  }
}
